criado endpoint delet juntamento com o teste de integração.